# neuralnets_project

./: daily_linear_regression.ipynb  daily_lstm.ipynb  daily_mlp.ipynb  data_loader.py  hdd_kwh_regression.ipynb  hourly_cnn.ipynb  hourly_linear_regression.ipynb  hourly_lstm.ipynb  hourly_mlp.ipynb  kwh_autoregression.ipynb  meteorological_observations.ipynb  peak_mlp.ipynb  plot_electric_usage.ipynb  plot_meteorological.ipynb  pyproject.toml
data/: UsageData-01_01_2022-11_26_2024-clean.csv  UsageData-11_27_2024-03_31_2026-clean.csv  UsageData-11_27_2024-04_05_2026-clean.csv  meteorological_observations_11_27_2024-3_31_2026.csv  meteorological_observations_1_1_2022-11_24_2024.csv
